fix: static header on mobile

--- a/_sass/minima/skins/bedux.scss
+++ b/_sass/minima/skins/bedux.scss
@@ -11,6 +11,10 @@ $color-scheme-dark: false;
   position: sticky;
   top: 0;
 
+  @media (max-width: 500px) {
+    position: static;
+  }
+
   .wrapper {
     display: flex;
     justify-content: space-between;
